Aggiunti 2 linguaggi in exercism

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -47,6 +47,46 @@
               <li><a href="#exercise">Hello World</a></li>
             </ul>
         </div>
+
+        <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
+            <p class="languageName">C#</p>
+            <ul class="exerciseIndex">
+              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+            </ul>
+        </div>
+
+        <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
+            <p class="languageName">JavaScript</p>
+            <ul class="exerciseIndex">
+              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">Hello World</a></li>
+            </ul>
+        </div>
       </div>
     </div>
   <script src="../public/js/index.js"></script>
