Aggiunta sezione pokemulator

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <p class="projectDescription">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
             <p class="projectLanguages">C++, C#, JavaScript</p>
         </div>
+        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="window.open('#link_to_Pokemulator')">
+            <p class="projectName">Emulatore Pokèmon</p>
+            <p class="projectDescription">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
+            <p class="projectLanguages">Ruby, Ruby2d, Gosu</p>
+        </div>
       </div>
     </div>
   <script src="public/js/index.js"></script>
