Fixato link pokemulator

--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
             <p class="projectDescription">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
             <p class="projectLanguages">C++, C#, JavaScript</p>
         </div>
-        <div class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)" onmousedown="window.open('#link_to_Pokemulator')">
+        <div id="pokemulator" class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
             <p class="projectName">Emulatore Pokèmon</p>
             <p class="projectDescription">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
             <p class="projectLanguages">Ruby, Ruby2d, Gosu</p>
         </div>
       </div>
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="public/js/index.js"></script>
 </body>
 </html>
