--- a/cpp/cpp.html
+++ b/cpp/cpp.html
@@ -34,41 +34,6 @@
                 <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
                 <ol class="partIndex">
                     <li><a href="parts/1.html#intro">Introduzione</a></li>
-                    <li><a href="parts/1.html#lorem">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
                 </ol>
             </div>
         </div>
@@ -77,42 +42,7 @@
             <div class="partInfo">
                 <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
                 <ol class="partIndex">
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">TBD</a></li>
                 </ol>
             </div>
         </div>
@@ -121,42 +51,7 @@
             <div class="partInfo">
                 <p class="partDescription">Questa parte si basa sui fondamentali del C++: dai tipi di dati alle librerie standard</p>
                 <ol class="partIndex">
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
-                    <li><a href="#intro">Introduzione</a></li>
+                    <li><a href="#intro">TBD</a></li>
                 </ol>
             </div>
         </div>
