--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -31,60 +31,21 @@
         <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
             <p class="languageName">C++</p>
             <ul class="exerciseIndex">
-              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="cpp/leap.html">Leap</a></li>
             </ul>
         </div>
 
         <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
             <p class="languageName">C#</p>
             <ul class="exerciseIndex">
-              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">TBD</a></li>
             </ul>
         </div>
 
         <div class="exerciseLanguageContainer" onmouseover="openContainerHeight(this)" onmouseout="closeContainerHeight(this)" onmousedown="#exercise">
             <p class="languageName">JavaScript</p>
             <ul class="exerciseIndex">
-              <li><a href="#exercise">Hello World lorem ipsum dolor sit amet</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
-              <li><a href="#exercise">Hello World</a></li>
+              <li><a href="#exercise">TBD</a></li>
             </ul>
         </div>
       </div>
