Aggiunto syntax highlighter per i codici, controlla public/css/codecolors.txt

--- a/exercism/cpp/leap.html
+++ b/exercism/cpp/leap.html
@@ -47,16 +47,17 @@
         <div class="exerciseCodeContainer">
           <div class="exerciseCodeHeader">
             <p class="exerciseCodeHeaderLabel">Leap.h</p>
-            <pre><code>
-              #if !defined(LEAP_H)
-              #define LEAP_H
+            <pre style='color:#3c3744;'><code><span style='color:#004a43; '>#</span><span style='color:#004a43; '>if</span><span style='color:#004a43; '> </span><span style='color:#808030; '>!</span><span style='color:#004a43; '>defined</span><span style='color:#808030; '>(</span><span style='color:#004a43; '>LEAP_H</span><span style='color:#808030; '>)</span>
+            <span style='color:#004a43; '>#</span><span style='color:#004a43; '>define</span><span style='color:#004a43; '> LEAP_H</span>
 
-              namespace leap {
-                bool is_leap_year(const int);
-              }
+            <span style='color:#9bc1bc; font-weight:bold; '>namespace</span> leap <span style='color:#3c3744; '>{</span>
+              <span style='color:#9bc1bc; font-weight:bold; '>bool</span> is_leap_year<span style='color:#808030; '>(</span><span style='color:#9bc1bc; font-weight:bold; '>const</span> <span style='color:#9bc1bc; font-weight:bold; '>int</span><span style='color:#808030; '>)</span><span style='color:#3c3744; '>;</span>
+            <span style='color:#3c3744; '>}</span>
 
-              #endif
-            </code></pre>
+
+            <span style='color:#004a43; '>#</span><span style='color:#004a43; '>endif</span>
+          </code></pre>
+            <!--Created using ToHtml.com on 2019-10-20 21:27:28 UTC -->
           </div>
           <div class="exerciseCodeCpp">
             <p class="exerciseCodeCppLabel">Leap.cpp</p>
@@ -77,6 +78,7 @@
     </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="../../public/js/index.js"></script>
 </body>
 </html>
