Aggiunti esercizi core C++ exercism

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -32,6 +32,12 @@
             <p class="languageName">C++</p>
             <ul class="exerciseIndex">
               <li><a href="cpp/leap.html">Leap</a></li>
+              <li><a href="cpp/reversestring.html">Reverse String</a></li>
+              <li><a href="cpp/spaceage.html">Space Age</a></li>
+              <li><a href="cpp/triangle.html">Triangle</a></li>
+              <li><a href="cpp/grains.html">Grains</a></li>
+              <li><a href="cpp/raindrops.html">Raindrops</a></li>
+              <li><a href="cpp/pangram.html">Pangram</a></li>
             </ul>
         </div>
 
