Aggiunto scheletro esercizi supplementari exercism C++

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -32,7 +32,18 @@
             <p class="languageName">C++</p>
             <ul class="exerciseIndex">
               <li><a href="cpp/leap.html">Leap</a></li>
-              <li><a href="cpp/reversestring.html">Reverse String</a></li>
+              <li><a href="cpp/reversestring.html">Reverse string</a></li>
+              <li><a href="cpp/isogram.html">Isogram</a></li>
+              <li><a href="cpp/scrabblescore.html">Scrabble score</a></li>
+              <li><a href="cpp/binary.html">Binary</a></li>
+              <li><a href="cpp/pascalstriangle.html">Pascal's triangle</a></li>
+              <li><a href="cpp/allyourbase.html">All your base</a></li>
+              <li><a href="cpp/hamming.html">Hamming</a></li>
+              <li><a href="cpp/differenceofsquares.html">Difference of squares</a></li>
+              <li><a href="cpp/nucleotidecount.html">Nucleotide count</a></li>
+              <li><a href="cpp/gradeschool.html">Grade school</a></li>
+              <li><a href="cpp/rnatranscription.html">RNA transcription</a></li>
+              <li><a href="cpp/sieve.html">Sieve</a></li>
               <li><a href="cpp/spaceage.html">Space Age</a></li>
               <li><a href="cpp/triangle.html">Triangle</a></li>
               <li><a href="cpp/grains.html">Grains</a></li>
