Aggiunto scheletro altri esercizi C++ su exercism

--- a/exercism/cpp/binary.html
+++ b/exercism/cpp/binary.html
@@ -24,25 +24,27 @@
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="../exercism.html">Exercism</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="#leap" class="active">Reverse String</a></li>
+            <li><a href="#leap" class="active">Binary</a></li>
         </nav>
     </header>
     <div class="mainPage">
-      <h2 class="exerciseTitle">Reverse String</h2>
+      <h2 class="exerciseTitle">Binary</h2>
       <div class="exerciseContainer">
         <div class="exerciseInfo">
           <p class="exerciseInfoLabel">Info</p>
           <p class="exerciseInfoPar">
-            Reverse a string.
+            Convert a binary number, represented as a string (e.g. '101010'), to its decimal equivalent using first principles.
+
+Implement binary to decimal conversion. Given a binary input string, your program should produce a decimal output. The program should handle invalid inputs.
           </p>
         </div>
         <div class="exerciseCodeContainer">
           <div class="exerciseCodeHeader">
-            <p class="exerciseCodeHeaderLabel">reverse_string.h</p>
+            <p class="exerciseCodeHeaderLabel">binary.h</p>
 
           </div>
           <div class="exerciseCodeCpp">
-            <p class="exerciseCodeCppLabel">reverse_string.cpp</p>
+            <p class="exerciseCodeCppLabel">binary.cpp</p>
 
           </div>
         </div>
