--- a/exercism/cpp/isogram.html
+++ b/exercism/cpp/isogram.html
@@ -24,25 +24,37 @@
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="../exercism.html">Exercism</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="#leap" class="active">Reverse String</a></li>
+            <li><a href="#leap" class="active">Isogram</a></li>
         </nav>
     </header>
     <div class="mainPage">
-      <h2 class="exerciseTitle">Reverse String</h2>
+      <h2 class="exerciseTitle">Isogram</h2>
       <div class="exerciseContainer">
         <div class="exerciseInfo">
           <p class="exerciseInfoLabel">Info</p>
           <p class="exerciseInfoPar">
-            Reverse a string.
+            Determine if a word or phrase is an isogram.
+
+An isogram (also known as a "nonpattern word") is a word or phrase without a repeating letter, however spaces and hyphens are allowed to appear multiple times.
+
+Examples of isograms:
+  <ul>
+    <li>lumberjacks</li>
+    <li>background</li>
+    <li>downstream</li>
+    <li>six-year-old</li>
+    </ul>
+
+The word isograms, however, is not an isogram, because the s repeats
           </p>
         </div>
         <div class="exerciseCodeContainer">
           <div class="exerciseCodeHeader">
-            <p class="exerciseCodeHeaderLabel">reverse_string.h</p>
+            <p class="exerciseCodeHeaderLabel">isogram.h</p>
 
           </div>
           <div class="exerciseCodeCpp">
-            <p class="exerciseCodeCppLabel">reverse_string.cpp</p>
+            <p class="exerciseCodeCppLabel">isogram.cpp</p>
 
           </div>
         </div>
