--- a/exercism/cpp/scrabblescore.html
+++ b/exercism/cpp/scrabblescore.html
@@ -24,25 +24,25 @@
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="../exercism.html">Exercism</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="#leap" class="active">Reverse String</a></li>
+            <li><a href="#leap" class="active">Scrabble Score</a></li>
         </nav>
     </header>
     <div class="mainPage">
-      <h2 class="exerciseTitle">Reverse String</h2>
+      <h2 class="exerciseTitle">Scrabble Score</h2>
       <div class="exerciseContainer">
         <div class="exerciseInfo">
           <p class="exerciseInfoLabel">Info</p>
           <p class="exerciseInfoPar">
-            Reverse a string.
+            Given a word, compute the scrabble score for that word.
           </p>
         </div>
         <div class="exerciseCodeContainer">
           <div class="exerciseCodeHeader">
-            <p class="exerciseCodeHeaderLabel">reverse_string.h</p>
+            <p class="exerciseCodeHeaderLabel">scrabble_score.h</p>
 
           </div>
           <div class="exerciseCodeCpp">
-            <p class="exerciseCodeCppLabel">reverse_string.cpp</p>
+            <p class="exerciseCodeCppLabel">scrabble_score.cpp</p>
 
           </div>
         </div>
