--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <p class="projectDescription">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
             <p class="projectLanguages">C++, C#, JavaScript</p>
         </div>
-        <div id="pokemulator" class="projectContainer" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
+        <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator" target="_blank" onmouseover="fadeIn(this)" onmouseout="fadeOut(this)">
             <p class="projectName">Emulatore Pokèmon</p>
             <p class="projectDescription">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
             <p class="projectLanguages">Ruby, Ruby2d, Gosu</p>
-        </div>
+        </a>
       </div>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
