--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Less Homepage</title>
-  <meta name="description" content="Less C++ reference">
+  <meta name="description" content="Less Homepage">
   <meta name="author" content="Less">
-  <link rel="stylesheet" href="../public/css/header.css">
+  <link rel="stylesheet" href="../public/css/index.css">
   <link rel="stylesheet" href="../public/css/animations.css">
+  <link rel="stylesheet" href="../public/css/animations/fade.css">
+  <link rel="stylesheet" href="../public/css/animations/slide.css">
+  <link rel="stylesheet" href="../public/css/animations/containerheight.css">
+  <link rel="stylesheet" href="../public/css/header.css">
   <link rel="stylesheet" href="../public/css/css/all.css">
   <link rel="stylesheet" href="../public/css/exercismmain.css">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
@@ -20,25 +24,76 @@
         <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
         <a href="#githubpage"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
-            <li><a href="../index.html">Home</a></li>
-            <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li><a href="cpp.html" class="active">Exercism</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
+          <li><a href="cpp.html" class="active">Exercism</a></li>
         </nav>
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi su <a href="https://exercism.io/" target="_blank">exercism.io</a></h2>
       <div id="allLanguagesContainer">
-        <div class="languageContainer" onmouseover="focusOn(this)" onmouseout="focusOff(this)" onmousedown="toPage('exercism/cpp.html')">
-            <p class="languageName">C++</p>
-        </div>
-        <div class="languageContainer" onmouseover="focusOn(this)" onmouseout="focusOff(this)" onmousedown="toPage('exercism/csharp.html')">
-            <p class="languageName">C#</p>
-        </div>
-        <div class="languageContainer" onmouseover="focusOn(this)" onmouseout="focusOff(this)" onmousedown="toPage('exercism/javascript.html')">
-            <p class="languageName">JavaScript</p>
-        </div>
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
+            <p class="languageName slideToDown makeAppear appear">C++</p>
+            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
+            <p class="languageDescription slideToUp makeDisappear disappear">
+              C++ supports procedural, object-oriented, functional and generic programming. Compilers for C++ are available for essentially every platform, including Windows, Mac OS, and Linux.<br><br>
+
+              Key Benefits:<br><br>
+
+                  Type safety: Encapsulate necessary unsafe operations<br>
+                  Resource safety: Not all resource management is managing memory<br>
+                  Performance: For some parts of almost all systems, it's important<br>
+                  Predictability: For hard and soft real-time systems<br>
+                  Teachability: Complexity of code should be proportional to the complexity of the task<br>
+                  Readability: People and machines ("analyzability")<br>
+                  Direct map to hardware: of instructions and fundamental data types<br>
+                  Zero-overhead abstraction: Classes with constructors and destructors, inheritance, generic programming, functional programming techniques
+
+            </p>
+        </a>
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
+            <p class="languageName slideToDown makeAppear appear">C++</p>
+            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
+            <p class="languageDescription slideToUp makeDisappear disappear">
+              C++ supports procedural, object-oriented, functional and generic programming. Compilers for C++ are available for essentially every platform, including Windows, Mac OS, and Linux.<br><br>
+
+              Key Benefits:<br><br>
+
+                  Type safety: Encapsulate necessary unsafe operations<br>
+                  Resource safety: Not all resource management is managing memory<br>
+                  Performance: For some parts of almost all systems, it's important<br>
+                  Predictability: For hard and soft real-time systems<br>
+                  Teachability: Complexity of code should be proportional to the complexity of the task<br>
+                  Readability: People and machines ("analyzability")<br>
+                  Direct map to hardware: of instructions and fundamental data types<br>
+                  Zero-overhead abstraction: Classes with constructors and destructors, inheritance, generic programming, functional programming techniques
+
+            </p>
+        </a>
+        <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html"">
+            <p class="languageName slideToDown makeAppear appear">C++</p>
+            <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
+            <p class="languageDescription slideToUp makeDisappear disappear">
+              C++ supports procedural, object-oriented, functional and generic programming. Compilers for C++ are available for essentially every platform, including Windows, Mac OS, and Linux.<br><br>
+
+              Key Benefits:<br><br>
+
+                  Type safety: Encapsulate necessary unsafe operations<br>
+                  Resource safety: Not all resource management is managing memory<br>
+                  Performance: For some parts of almost all systems, it's important<br>
+                  Predictability: For hard and soft real-time systems<br>
+                  Teachability: Complexity of code should be proportional to the complexity of the task<br>
+                  Readability: People and machines ("analyzability")<br>
+                  Direct map to hardware: of instructions and fundamental data types<br>
+                  Zero-overhead abstraction: Classes with constructors and destructors, inheritance, generic programming, functional programming techniques
+
+            </p>
+        </a>
       </div>
     </div>
   <script src="../public/js/index.js"></script>
+  <script src="../public/js/fade.js"></script>
+  <script src="../public/js/slide.js"></script>
+  <script src="../public/js/height.js"></script>
 </body>
 </html>
